--- a/index.html
+++ b/index.html
@@ -1,5 +1,11 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>yaorongke</title>
+</head>
 <body>
-<p>bookyong</p>
+    <h1>bookyong</h1>
+    <h1>Hello ~</h1>
 </body>
 </html>
